# antivirus

./: CMakeLists.txt  antywirus  cipher.c  cipher.h  db.txt  encrypt.c  encrypt.h  file_handler.c  file_handler.h  hashDB_handler.c  hashDB_handler.h  hashing.c  hashing.h  main.c  quarantine.c  quarantine.h  quarantine_handler.c  queue.c  queue.h  tree.c  tree.h
dangerous/: cryptominer  keylogger  malware  ransomware  virus
tests/: link_to_virus  virus
